<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/remind_to_take_a_break"
        android:entries="@array/pref_remind_me_to_take_a_break"
        android:entryValues="@array/pref_duration"
        android:key="@string/key_upload_quality"
        android:summary="@string/remind_me"
        android:title="@string/remind_me" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/remind_me_for_bed_time"
        android:title="@string/remind_for_bed_time" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/limit_data_usage"
        android:summary="@string/stream_video"
        android:title="@string/limit_mobile_usage" />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/double_tap_to_seek"
        android:entries="@array/pref_seek_values"
        android:entryValues="@array/pref_duration"
        android:key="@string/pref_seek_val"
        android:summary="@string/seconds"
        android:title="@string/double_tap_to_seek" />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/uploads"
        android:entries="@array/pref_uploads"
        android:entryValues="@array/pref_duration"
        android:key="@string/pref_uploads"
        android:summary="@string/specify_network_prefs"
        android:title="Uploads" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/prefs_restricted_mode"
        android:summary="@string/restricated_mode"
        android:title="@string/restricated_mode_description" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/prefs_enable_stats"
        android:title="@string/enable_stats" />

    </PreferenceCategory>

</PreferenceScreen>